Shift GUI buttons to prevent accidental resets.

--- a/site/src/components/ui/ui.css
+++ b/site/src/components/ui/ui.css
@@ -5,3 +5,7 @@
     align-items: center;
     width: 100%;
 }
+
+#board-wrapper {
+    margin-bottom: 20px;
+}
